Add script to deploy

--- a/.docker/nginx/nginx.conf
+++ b/.docker/nginx/nginx.conf
@@ -7,11 +7,6 @@ upstream php-pimcore10 {
     server php-fpm:9000;
 }
 
-
-upstream php-pimcore10-debug {
-    server php-fpm-debug:9000;
-}
-
 server {
     listen [::]:80 default_server;
     listen 80 default_server;
@@ -24,8 +19,8 @@ server {
     client_max_body_size 100m;
 
     # It is recommended to seclude logs per virtual host
-    #access_log  /var/log/access.log;
-    #error_log   /var/log/error.log error;
+    access_log  /var/log/access.log;
+    error_log   /var/log/error.log error;
 
     # Protected Assets
     #
@@ -71,7 +66,7 @@ server {
     location ~* /\.(?!well-known/) {
         deny all;
         log_not_found off;
-        access_log off;
+        access_log on;
     }
 
     # c) Prevent clients from accessing to backup/config/source files
@@ -89,7 +84,7 @@ server {
     location ~* .*/(image|video)-thumb__\d+__.* {
         try_files /var/tmp/thumbnails$uri /index.php;
         expires 2w;
-        access_log off;
+        access_log on;
         add_header Cache-Control "public";
     }
 
@@ -98,7 +93,7 @@ server {
     location ~* ^(?!/admin)(.+?)\.((?:css|js)(?:\.map)?|jpe?g|gif|png|svgz?|eps|exe|gz|zip|mp\d|ogg|ogv|webm|pdf|docx?|xlsx?|pptx?)$ {
         try_files /var/assets$uri $uri =404;
         expires 2w;
-        access_log off;
+        access_log on;
         log_not_found off;
         add_header Cache-Control "public";
     }
@@ -141,11 +136,6 @@ server {
         # Mitigate https://httpoxy.org/ vulnerabilities
         fastcgi_param HTTP_PROXY "";
 
-        # If Xdebug session is requested, pass it to the Xdebug enabled container
-        if ($http_cookie ~* "XDEBUG_SESSION") {
-            fastcgi_pass php-pimcore10-debug;
-        }
-
         fastcgi_pass php-pimcore10;
         # Prevents URIs that include the front controller. This will 404:
         # http://domain.tld/index.php/some-path
@@ -155,7 +145,7 @@ server {
 
     # PHP-FPM Status and Ping
     location /fpm- {
-        access_log off;
+        access_log on;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         location /fpm-status {
@@ -173,7 +163,7 @@ server {
     location /nginx-status {
         allow 127.0.0.1;
         deny all;
-        access_log off;
+        access_log on;
         stub_status;
     }
 }
