--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,64 +1,38 @@
-services:
-    redis:
-        image: redis:alpine
-        command: [ redis-server, --maxmemory 128mb, --maxmemory-policy volatile-lru, --save "" ]
+version: '3'
 
-    db:
-        image: mariadb:10.7
-        working_dir: /application
-        command: [mysqld, --character-set-server=utf8mb4, --collation-server=utf8mb4_unicode_ci, --innodb-file-per-table=1]
-        volumes:
-            - pimcore-demo-database:/var/lib/mysql
+services:
+
+    php-fpm:
+        build:
+            context: .
+            dockerfile: .docker/php-fpm/Dockerfile
+        container_name: php-fpm
         environment:
-            MYSQL_ROOT_PASSWORD: ROOT
-            MYSQL_DATABASE: pimcore
-            MYSQL_USER: pimcore
-            MYSQL_PASSWORD: pimcore
+            PIMCORE_INSTALL_ADMIN_USERNAME: admin
+            PIMCORE_INSTALL_ADMIN_PASSWORD: admin
+            PIMCORE_INSTALL_MYSQL_USERNAME: pim_user
+            PIMCORE_INSTALL_MYSQL_PASSWORD: qwerty12345
+        volumes:
+            - .:/var/www/html
+        depends_on:
+            -   database
+
+    database:
+        image: mysql:8.0
+        container_name: database
+        volumes:
+            - ./.mysql-data:/var/lib/mysql/:rw
+        environment:
+            MYSQL_ROOT_PASSWORD: password
 
     nginx:
         image: nginx:stable-alpine
+        container_name: nginx
         ports:
-            - "80:80"
+            - "8080:80"
         volumes:
             - .:/var/www/html:ro
-            - ./.docker/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+            - ./.docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+            - ./.nginx-logs:/var/log/nginx:rw
         depends_on:
             - php-fpm
-            - php-fpm-debug
-
-    php-fpm:
-        #user: '1000:1000' # set to your uid:gid
-        image: pimcore/pimcore:PHP8.1-fpm
-        environment:
-            COMPOSER_HOME: /var/www/html
-        depends_on:
-            - db
-        volumes:
-            - .:/var/www/html
-            - pimcore-tmp-storage:/tmp
-
-    php-fpm-debug:
-        #user: '1000:1000' # set to your uid:gid
-        image: pimcore/pimcore:PHP8.1-fpm-debug
-        environment:
-            PHP_IDE_CONFIG: "serverName=localhost"
-            COMPOSER_HOME: /var/www/html
-        depends_on:
-            - db
-        volumes:
-            - .:/var/www/html
-            - pimcore-tmp-storage:/tmp
-
-    supervisord:
-        #user: '1000:1000' # set to your uid:gid
-        image: pimcore/pimcore:PHP8.1-supervisord
-        depends_on:
-            - db
-        volumes:
-            - .:/var/www/html
-            - ./.docker/supervisord.conf:/etc/supervisor/conf.d/pimcore.conf:ro
-
-
-volumes:
-    pimcore-demo-database:
-    pimcore-tmp-storage:
